fix favicon href

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       name="description"
       content="DrArrow allows creating very simple schemas and diagrams, then export them as images."
     />
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon.png" />
-    <link rel="shortcut icon" type="image/png" sizes="96x96" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="./favicon.png" />
+    <link rel="shortcut icon" type="image/png" sizes="96x96" href="./favicon.png" />
     <script src="./libs/multibyte-stream.umd.js"></script>
     <style>
       html,
