--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
       }
 
       .panel-btn {
+        flex: 0 0 40px;
+        height: 40px;
         cursor: pointer;
         border-radius: 5px;
         border: 1px solid #ccc;
-        height: 40px;
         background-repeat: no-repeat;
         background-position: center;
       }
